[package]
name = "redleaf"
version = "0.1.0"
authors = ["Anton Burtsev <aburtsev@uci.edu>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86 = "0.19.0"
spin = "0.5.2"
volatile = "0.2.3"
x86_64 = "0.7.5"
pc-keyboard = "0.3.1"
slabmalloc = "0.3.2"
backtracer = { git = "https://github.com/gz/backtracer.git" }
addr2line = { git = "https://github.com/gz/addr2line.git", branch = "patch-1", default-features = false, features = ["alloc", "rustc-demangle"] }
bit_field = "0.9.0"
bitflags = "1.0.4"
usr = { path = "usr", version = "0.1.0" }

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[dependencies.num-traits]
version = "0.2.8"
default-features = false
