[package]
name = "redleaf"
version = "0.1.0"
authors = ["Anton Burtsev <aburtsev@uci.edu>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86 = "0.19.0"
spin = { path = "./lib/spin-rs" }
volatile = "0.2.3"
x86_64 = "0.7.5"
pc-keyboard = "0.3.1"
slabmalloc = { path = "./lib/slabmalloc-kernel" }
backtracer = { git = "https://github.com/gz/backtracer.git" }
addr2line = { git = "https://github.com/gz/addr2line.git", branch = "patch-1", default-features = false, features = ["alloc", "rustc-demangle"] }
bit_field = "0.9.0"
bitflags = "1.0.4"
syscalls = { path = "sys/interfaces/syscalls", version = "0.1.0" }
create = { path = "sys/interfaces/create", version = "0.1.0" }
usr = { path = "sys/interfaces/usr", version = "0.1.0" }
proxy = { path = "sys/interfaces/proxy", version = "0.1.0" }
ixgbe = { path = "sys/interfaces/dev/ixgbe", version = "0.1.0" }
ahci = { path = "sys/interfaces/dev/ahci", version = "0.1.0" }
log = "0.4"
custom_error = { git = "https://github.com/gz/custom_error.git" }
pcid = { path = "./lib/pcid" }
elfloader = { path = "./lib/rust-elfloader" }
pci_driver = { path = "./sys/interfaces/dev/pci/pci_driver", version = "0.1.0" }

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[dependencies.num-traits]
version = "0.2.8"
default-features = false

[features]
smp = [ ]
trace_alloc = [ ]
trace_vspace = []
page_fault_on_ist = []
large_mem = []
c220g2_ixgbe = []
trace_sched = []
