[workspace]
members = [
	"lib/redhttpd",
	"lib/smolnet",
	"lib/libbenchnet",
	"sys/driver/ixgbe",
	"sys/driver/membdev",
	"sys/driver/nvme",
	"sys/driver/pci",
	"sys/driver/tpm",
	"sys/driver/virtio_net",
	"sys/driver/virtio_block",
	"sys/driver/virtio_backend",
	"sys/driver/virtio_net_mmio",
	"sys/init",
	"usr/proxy",
	"usr/shadow/bdev",
	"usr/shadow/net",
	"usr/shadow/xv6net",
	"usr/shadow/nvme",
	"usr/test/benchhash",
	"usr/test/benchnet_inside",
	"usr/test/benchnvme",
	"usr/test/dom_c",
	"usr/test/dom_d",
	"usr/test/shadow",
	"usr/test/testtpm",
	"usr/xv6/kernel/core",
	"usr/xv6/kernel/fs",
	"usr/xv6/kernel/net",
	"usr/xv6/usr/bin",
	"usr/xv6/usr/lib",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
debug = true
