[workspace]
members = [
	"lib/redhttpd",
	"lib/smolnet",
	"lib/libbenchnet",
	# "sys/driver/ixgbe",
	# "sys/driver/membdev",
	# "sys/driver/nvme",
	# "sys/driver/pci",
	# "sys/driver/tpm",
	# "sys/driver/virtio_net",
	# "sys/driver/virtio_block",
	"sys/init",
	# "usr/proxy",
	# "usr/shadow/bdev",
	# "usr/shadow/net",
	# "usr/shadow/xv6net",
	# "usr/shadow/nvme",

	# "usr/test/benchhash",
	# "usr/test/benchnet_inside",
	# "usr/test/benchnvme",
	# "usr/test/dom_c",
	# "usr/test/dom_d",
	# "usr/test/shadow",
	# "usr/test/testtpm",

	# "usr/xv6/kernel/core",
	# "usr/xv6/kernel/fs",
	# "usr/xv6/kernel/net",
	"usr/xv6/usr/bin",
	"usr/xv6/usr/lib",

	"generated/ixgbe_entry_point",
	"generated/membdev_entry_point",
	"generated/nvme_entry_point",
	"generated/pci_entry_point",
	"generated/tpm_entry_point",
	"generated/virtio_block_entry_point",
	"generated/virtio_net_entry_point",
	"generated/proxy_entry_point",
	"generated/bdev_shadow_entry_point",
	"generated/net_shadow_entry_point",
	"generated/nvme_shadow_entry_point",
	"generated/xv6net_shadow_entry_point",

	"generated/benchnvme_entry_point",
	"generated/dom_c_entry_point",
	"generated/dom_d_entry_point",
	"generated/shadow_entry_point",

	"generated/xv6kernel_entry_point",
	"generated/xv6fs_entry_point",
	"generated/xv6net_entry_point",
	"generated/xv6net_shadow_entry_point",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
debug = true
