[package]
name = "interface"
version = "0.1.0"
authors = ["Redleaf  Team <aburtsev@uci.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
byteorder = { version = "1.2", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-derive = { version = "0.3", default-features = false }
syscalls = { path = "../lib/core/interfaces/syscalls/", version = "0.1.0" }
pci_driver = { path = "../lib/core/interfaces/dev/pci/pci_driver/", version = "0.1.0" }
console = { path = "../lib/core/console", version = "0.1.0" }
spin = { path = "../lib/core/spin-rs" }
hashbrown = "0.7.2"



