[package]
name = "console"
version = "0.1.0"
authors = ["RedLeaf Team <aburtsev@uci.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
spin = { path = "../spin-rs" }
libsyscalls = { path = "../libsyscalls", version = "0.1.0" }

#[dev-dependencies]
#redleaf = { path = "../", version = "0.1.0" }
