[package]
name = "slabmalloc"
version = "0.3.4"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
description = "Simple slab based malloc implementation in rust. Can be used stand-alone or in order to provide the necessary interface to rusts liballoc library. slabmalloc only relies on libcore."
homepage = "https://github.com/gz/rust-slabmalloc"
repository = "https://github.com/gz/rust-slabmalloc"
documentation = "http://gz.github.io/rust-slabmalloc/slabmalloc/"

readme = "README.md"
license = "MIT"

keywords = ["os", "malloc", "slab", "alloc", "memory"]

[features]
unstable = []
default = [ "unstable" ]

[dependencies]
spin = { path = "../spin-rs" }
log = "0.4"

[target.'cfg(unix)'.dev-dependencies]
rand = "0.3"
libc = "0.2"
env_logger = "0.5.10"
