[package]
name = "init"
version = "0.1.0"
authors = ["Anton Burtsev <aburtsev@uci.edu>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86 = "0.19.0"
syscalls = { path = "../lib/syscalls", version = "0.1.0" }
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[dependencies.num-traits]
version = "0.2.8"
default-features = false
