[package]
name = "init"
version = "0.1.0"
authors = ["RedLeaf Team"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86 = "0.19.0"
libsyscalls = { path = "../lib/libsyscalls", version = "0.1.0" }
syscalls = { path = "../interfaces/syscalls", version = "0.1.0" }
console = { path = "../lib/console", version = "0.1.0" }
malloc = { path = "../lib/malloc", version = "0.1.0" }
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[dependencies.num-traits]
version = "0.2.8"
default-features = false

[features]
test_sleep = [ ]
