[package]
name = "init"
version = "0.1.0"
authors = ["RedLeaf Team"]
edition = "2018"

[lib]
crate-type = ["staticlib"]
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[dependencies]
array-init = "0.1.1"
x86 = "0.19.0"
libsyscalls = { path = "../lib/libsyscalls", version = "0.1.0" }
syscalls = { path = "../interfaces/syscalls", version = "0.1.0" }
proxy = { path = "../interfaces/proxy", version = "0.1.0" }
usr = { path = "../interfaces/usr", version = "0.1.0" }
create = { path = "../interfaces/create", version = "0.1.0" }
console = { path = "../lib/console", version = "0.1.0" }
malloc = { path = "../lib/malloc", version = "0.1.0" }
spin = { path = "../../lib/spin-rs" }
libtime = { path = "../lib/libtime", version = "0.1.0" }
pc-keyboard = "0.3.1"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[dependencies.num-traits]
version = "0.2.8"
default-features = false

[features]
default = [
    "test_ab",
    "test_cd",
    "shadow",
    # "benchnet",
    # "benchnvme"
]

test_sleep = [ ]
test_timer_thread = [ ]
test_threads = [ ]
test_guard_page = [ ]
test_ab = []
test_cd = []
benchnet =[]
membdev = []
benchnvme = []
# Bring up shadow domains for restart.
# Use with `tramp` feature, otherwise the stack won't unwind properly
shadow = []
