[package]
name = "dom_proxy"
version = "0.1.0"
authors = ["RedLeaf Team"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86_64 = "0.7.5"
syscalls = { path = "../../sys/interfaces/syscalls", version = "0.1.0" }
usr = { path = "../../sys/interfaces/usr", version = "0.1.0" }
create = { path = "../../sys/interfaces/create", version = "0.1.0" }
proxy = { path = "../../sys/interfaces/proxy", version = "0.1.0" }
libsyscalls = { path = "../../sys/lib/libsyscalls", version = "0.1.0" }
libtime = { path = "../../sys/lib/libtime", version = "0.1.0" }
console = { path = "../../sys/lib/console", version = "0.1.0" }
slabmalloc = { path = "../../sys/lib/slabmalloc" }
malloc = { path = "../../sys/lib/malloc", version = "0.1.0" }
rref = { path = "../../sys/lib/rref", version = "0.1.0" }
spin = { path = "../../lib/spin-rs" }

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[dependencies.num-traits]
version = "0.2.8"
default-features = false
