[package]
name = "libbenchnvme"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies]
b2histogram = "1.0"
byteorder = { version = "1.2", default-features = false }
libsyscalls = { path = "../../../lib/core/libsyscalls" }
libtime = { path = "../../../lib/core/libtime" }
interface = { path = "../../../interface/generated" }
console = { path = "../../../lib/core/console" }
