[package]
name = "libtpm"
version = "0.1.0"
authors = ["Vikram Narayanan <vikram186@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsyscalls = { path = "../../../lib/core/libsyscalls" }
libtime = { path = "../../../lib/core/libtime" }
interface = { path = "../../../interface/generated" }
console = { path = "../../../lib/core/console" }
malloc = { path = "../../../lib/core/malloc" }
bitfield = "0.13.2"
byteorder = { version = "1.3.4", default-features = false }
sha2 = { path = "../../../lib/external/hashes/sha2", version = "0.9.1", default-features = false }