[package]
name = "redleaf_init"
version = "0.1.0"
authors = ["RedLeaf Team"]
edition = "2018"

[dependencies]
array-init = "0.1.1"
libsyscalls = { path = "../../../lib/core/libsyscalls" }
syscalls = { path = "../../../lib/core/interfaces/syscalls" }
interface = { path = "../../../interface/generated" }
console = { path = "../../../lib/core/console" }
malloc = { path = "../../../lib/core/malloc" }
spin = { path = "../../../lib/core/spin-rs" }
libtime = { path = "../../../lib/core/libtime" }
pc-keyboard = "0.3.1"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[dependencies.num-traits]
version = "0.2.8"
default-features = false

[features]
default = [
    "test_ab",
    "test_cd",
    "membdev",
    #"shadow",
    #"benchnet",
    # "benchnvme",
    #"hashbench",
    "tpm",
    "virtnet",
]

test_sleep = [ ]
test_timer_thread = [ ]
test_threads = [ ]
test_guard_page = [ ]
test_ab = []
test_cd = []
benchnet =[]
membdev = []
benchnvme = []
tpm = []
virtnet = []
# for testing hashtable
hashbench = []
# Bring up shadow domains for restart.
# Use with `tramp` feature, otherwise the stack won't unwind properly
# Also, turn the `default-memdisk` feature on in `sys/driver/membdev`.
# Otherwise, the membdev domain will not have a memdisk to operative with.
shadow = []
