[package]
name = "example"
version = "0.1.0"
authors = ["RedLeaf Team"]
edition = "2018"

[dependencies]
syscalls = { path = "../../../lib/core/interfaces/syscalls" }
libsyscalls = { path = "../../../lib/core/libsyscalls" }
libtime = { path = "../../../lib/core/libtime" }
console = { path = "../../../lib/core/console" }
malloc = { path = "../../../lib/core/malloc" }
spin = { path = "../../../lib/core/spin-rs" }
unwind = { path = "../../../lib/core/unwind" }
codegen-lib = { path = "../../../tools/redIDL/codegen/codegen-old/codegen-lib" }
interface = { path = "../../../interface/generated", features = ["proxy"] }
