[package]
name = "dom_proxy"
version = "0.1.0"
authors = ["RedLeaf Team"]
edition = "2018"

[dependencies]
syscalls = { path = "../../../lib/core/interfaces/syscalls" }
usr = { path = "../../../lib/core/interfaces/usr" }
create = { path = "../../../lib/core/interfaces/create" }
proxy = { path = "../../../lib/core/interfaces/proxy" }
libsyscalls = { path = "../../../lib/core/libsyscalls" }
libtime = { path = "../../../lib/core/libtime" }
console = { path = "../../../lib/core/console" }
malloc = { path = "../../../lib/core/malloc" }
rref = { path = "../../../lib/core/rref" }
spin = { path = "../../../lib/core/spin-rs" }
unwind = { path = "../../../lib/core/unwind" }
codegen-lib = { path = "../../../tools/redIDL/codegen/codegen-lib" }
codegen = { path = "../../../interface/target/codegen", features = ["trampoline"] }

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[dependencies.num-traits]
version = "0.2.8"
default-features = false

[features]
default = [
    "tramp",
]

# Enable stack unwinding. RPC calls will return an error if the thread unwinds
tramp = ["codegen/trampoline"]
