[package]
name = "elfloader"
version = "0.9.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>", "Christopher Cole <chris.cole.09@gmail.com>", "John Kåre Alsaker <john.kare.alsaker@gmail.com>"]
repository = "https://github.com/gz/rust-elfloader"
license = "MIT/Apache-2.0"
description = "A rust library to load ELF files."
keywords = ["elf", "x86", "os"]
readme = "README.md"

[dependencies]
log = "0.4"
xmas-elf = "0.7"

[target.'cfg(target_family = "unix")'.dev-dependencies]
env_logger = "0.7.1"
