[package]
name = "libsyscalls"
version = "0.1.0"
authors = ["RedLeaf Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
spin = { path = "../spin-rs" }
syscalls = { path = "../interfaces/syscalls" }
platform = { path = "../interfaces/platform" }
pc-keyboard = "0.3.1"

#[dev-dependencies]
#redleaf = { path = "../", version = "0.1.0" }
