[package]
name = "malloc"
version = "0.1.0"
authors = ["Vikram Narayanan <narayav1@uci.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slabmalloc = { path = "../../external/slabmalloc" }
libsyscalls = { path = "../libsyscalls", version = "0.1.0" }
spin = { path = "../spin-rs" }
