[package]
name = "rref"
version = "0.1.0"
authors = ["RedLeaf Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
spin = { path = "../../../lib/spin-rs" }
libsyscalls = { path = "../libsyscalls", version = "0.1.0"}
syscalls = { path = "../../interfaces/syscalls", version = "0.1.0"}
console = { path = "../console", version = "0.1.0" }

[dev-dependencies]
# for mocking syscalls in cargo-test
pc-keyboard = "0.3.1"
hashbrown = "0.6"

[features]
default = [
    "rref_dbg",
]
rref_dbg = []
