[package]
name = "rref"
version = "0.1.0"
authors = ["RedLeaf Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
spin = { path = "../spin-rs" }
libsyscalls = { path = "../libsyscalls" }
syscalls = { path = "../interfaces/syscalls" }
console = { path = "../console" }

[dev-dependencies]
# for mocking syscalls in cargo-test
pc-keyboard = "0.3.1"
hashbrown = "0.6"

[features]
default = [
    "rref_dbg",
]
rref_dbg = []
