[package]
name = "ahci_device"
version = "0.1.0"
authors = ["Redleaf team <aburtsev@uci.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsyscalls = { path = "../../core/libsyscalls" }
syscalls = { path = "../../core/interfaces/syscalls" }
spin = { path = "../../core/spin-rs" }
ahci_regs = { path = "../../core/interfaces/dev/ahci"}
libtime = { path = "../../core/libtime" }
console = { path = "../../core/console" }
libdma = { path = "../libdma" }
platform = { path = "../../core/interfaces/platform" }
malloc = { path = "../../core/malloc" }
rref = { path = "../../core/rref" }
interface = { path = "../../../interface/generated" }

byteorder = { version = "1.2", default-features = false }
array-init = "0.1.1"