[package]
name = "ixgbe_device"
version = "0.1.0"
authors = ["Vikram Narayanan <vikram186@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsyscalls = { path = "../../core/libsyscalls" }
libtime = { path = "../../core/libtime" }
console = { path = "../../core/console" }
libdma = { path = "../libdma" }
platform = { path = "../../core/interfaces/platform" }
malloc = { path = "../../core/malloc" }
interface = { path = "../../../interface/generated" }
array-init = "0.1.1"
