[package]
name = "pcidevice"
version = "0.1.0"
authors = ["Vikram Narayanan <vikram186@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsyscalls = { path = "../../core/libsyscalls" }
console = { path = "../../core/console" }
platform = { path = "../../core/interfaces/platform" }
pci_driver = { path = "../../core/interfaces/dev/pci/pci_driver" }
bitflags = "1.0.4"
byteorder = { version = "1.2", default-features = false }

[features]
c220g2_ixgbe = []
