[package]
name = "virtio_net_mmio_device"
version = "0.1.0"
authors = ["Redleaf team <aburtsev@uci.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsyscalls = { path = "../../../lib/core/libsyscalls" }
libtime = { path = "../../../lib/core/libtime" }
console = { path = "../../../lib/core/console" }
malloc = { path = "../../../lib/core/malloc" }
spin = { path = "../../../lib/core/spin-rs" }
volatile_accessor = { path = "../../../lib/external/volatile_accessor" }

pci_driver = { path = "../../../lib/core/interfaces/dev/pci/pci_driver" }
interface = { path = "../../../interface/generated" }

virtio_backend_trusted = { path = "../virtio_backend" }
virtio_device = { path = "../virtio" }

hashbrown = "0.7.2"