[package]
name = "pci"
version = "0.1.0"
authors = ["RedLeaf Team"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86 = "0.19.0"
syscalls = { path = "../../../sys/interfaces/syscalls", version = "0.1.0" }
usr = { path = "../../../sys/interfaces/usr", version = "0.1.0" }
libsyscalls = { path = "../../../sys/lib/libsyscalls", version = "0.1.0" }
console = { path = "../../../sys/lib/console", version = "0.1.0" }
malloc = { path = "../../../sys/lib/malloc", version = "0.1.0" }
spin = { path = "../../../lib/spin-rs" }
bitflags = "1.0.4"
byteorder = { version = "1.2", default-features = false }
serde_derive = "1.0.101"
hashbrown = "0.6"
pci_driver = { path = "../../../sys/interfaces/dev/pci/pci_driver", version = "0.1.0" }

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[dependencies.num-traits]
version = "0.2.8"
default-features = false

[features]
c220g2_ixgbe = []
